--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,16 +41,16 @@ jobs:
 #          username: ${{ secrets.GHCR_USERNAME }}
 #          password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: set global env
-        id: global_env
-        run: |
-          echo "::set-output name=IMAGE_NAME::${GITHUB_REPOSITORY#*/}"
-          echo "::set-output name=DOCKERHUB_IMAGE_NAME::ghcr.io/${GITHUB_REPOSITORY}/${GITHUB_REPOSITORY#*/}"
+#      - name: set global env
+#        id: global_env
+#        run: |
+#          echo "::set-output name=IMAGE_NAME::${GITHUB_REPOSITORY#*/}"
+#          echo "::set-output name=DOCKERHUB_IMAGE_NAME::ghcr.io/${GITHUB_REPOSITORY}/${GITHUB_REPOSITORY#*/}"
 
       #     Build Docker image:
       - name: Build and tag image
         run: |
-          docker build -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:${GITHUB_SHA::8}" .
+          docker build -t "ghcr.io/${GITHUB_REPOSITORY}/spring-app-image:${GITHUB_SHA::8}" .
 
       - name: Docker login
         run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
@@ -59,6 +59,6 @@ jobs:
       - name: Publish image
         env:
           IMAGE_NAME: $GITHUB_REPOSITORY
-        run: docker push "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:${GITHUB_SHA::8}"
+        run: docker push "ghcr.io/${GITHUB_REPOSITORY}/spring-app-image:${GITHUB_SHA::8}"
 
       
