--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,16 +49,13 @@ jobs:
 
       #     Build Docker image:
       - name: Build and tag image
-        run: |
-          docker build -t "ghcr.io/${GITHUB_REPOSITORY}/spring-app-image:${GITHUB_SHA::8}" .
+        run: docker build -t "spring-app-image:${GITHUB_SHA::8}" .
 
       - name: Docker login
         run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
 
       #     Publish image to github package repository:
       - name: Publish image
-        env:
-          IMAGE_NAME: $GITHUB_REPOSITORY
-        run: docker push "ghcr.io/${GITHUB_REPOSITORY}/spring-app-image:${GITHUB_SHA::8}"
+        run: docker push "ghcr.io/spring-app-image:${GITHUB_SHA::8}"
 
       
