--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
       #     Build Docker image:
       - name: Build and tag image
-        run: docker build -t "spring-app-image:${GITHUB_SHA::8}" .
+        run: docker build -t "ghcr.io/spring-app-image:${GITHUB_SHA::8}" .
 
       - name: Docker login
         run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
