--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
       #     Build Docker image:
 
       - name: Build and tag image
-        run: docker build "ghcr.io/alexmeh96/spring-app-image:${GITHUB_SHA::8}" .
+        run: docker build -t "ghcr.io/alexmeh96/spring-app-image:${GITHUB_SHA::8}" .
 
       - name: Docker login
         run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
