--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
           SSH_EC2: ${{ secrets.SSH_EC2  }}
 
         run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${SSH_EC2}
+          echo "$PRIVATE_KEY" > private_key.pem && chmod 600 private_key.pem
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${SSH_EC2}
           sudo docker pull "ghcr.io/alexmeh96/spring-app/spring-app:${GITHUB_SHA::8}"
           sudo docker run -p 80:8080 "ghcr.io/alexmeh96/spring-app/spring-app:${GITHUB_SHA::8}"
