--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,6 @@ jobs:
           echo "$PRIVATE_KEY" > private_key.pem && chmod 600 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${SSH_EC2} '
 
-            sudo docker pull "ghcr.io/alexmeh96/spring-app-image:${1}";
+            sudo docker pull "ghcr.io/alexmeh96/spring-app-image:${1}" &&
             sudo docker run -d -p 80:8080 "ghcr.io/alexmeh96/spring-app-image:${1}"
-          ' ${GITHUB_SHA::8}
+          ' < ${GITHUB_SHA::8}
