--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,6 @@ jobs:
           echo "$PRIVATE_KEY" > private_key.pem && chmod 600 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${SSH_EC2} '
 
-            sudo docker pull "ghcr.io/alexmeh96/spring-app-image:${TAG_DOCKER}" &&
-            sudo docker run -d -p 80:8080 "ghcr.io/alexmeh96/spring-app-image:${TAG_DOCKER}"
+            sudo docker pull "ghcr.io/alexmeh96/spring-app-image:$TAG_DOCKER" &&
+            sudo docker run -d -p 80:8080 "ghcr.io/alexmeh96/spring-app-image:$TAG_DOCKER"
           '
