--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,6 @@ jobs:
           echo "$PRIVATE_KEY" > private_key.pem && chmod 600 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${SSH_EC2} "
 
-            sudo docker pull ghcr.io/alexmeh96/spring-app-image:DOCKER_TAG &&
-            sudo docker run -d -p 80:8080 ghcr.io/alexmeh96/spring-app-image:DOCKER_TAG
+            sudo docker pull ghcr.io/alexmeh96/spring-app-image:$DOCKER_TAG &&
+            sudo docker run -d -p 80:8080 ghcr.io/alexmeh96/spring-app-image:$DOCKER_TAG
           "
