--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,7 @@ jobs:
 
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${SSH_EC2} "
             echo "DOCKER_TAG=$DOCKER_TAG" > .env;
+            sudo docker-compose down;
             sudo docker-compose build;
             sudo docker-compose up -d
           "
